--- a/public/index.html
+++ b/public/index.html
@@ -307,7 +307,9 @@
       <!-------------------------- SOUS MENU HOW WE CAN HELP ---------------------------->
       <div class="menuCache_howCanWeHelp">
         <ul>
-          <li><a href="http://">Pharmaceutical & Biotech Companies</a></li>
+          <li>
+            <a href="pharmaceutical.html">Pharmaceutical & Biotech Companies</a>
+          </li>
           <li><a href="http://">Healthcare Professionals</a></li>
           <li><a href="http://">Patient Groups</a></li>
           <li><a href="http://">Patients</a></li>
