--- a/public/pharmaceutical.html
+++ b/public/pharmaceutical.html
@@ -275,10 +275,10 @@
             <nav>
               <ul>
                 <li>
-                  <a href="mission.html" class="stayActif">Mission</a>
+                  <a href="mission.html">Mission</a>
                 </li>
                 <li>
-                  <a href="javascript:" class="menuHowCanWeHelp"
+                  <a href="javascript:" class="menuHowCanWeHelp stayActif"
                     >How we can help<i class="fas fa-angle-down"></i
                   ></a>
                 </li>
@@ -366,172 +366,82 @@
     </header>
     <!-------------------------- CONTENU ---------------------------->
     <main>
-      <div class="mainHeader">
-        <div class="mainHeader_containt">
-          <span>OUR MISSION</span>
-          <p>
-            RIGHT MEDICINE. <br />
-            RIGHT PATIENT. <br />
-            RIGHT TIME.
-          </p>
-          <input type="button" value="Our mission in 120 seconds" />
+      <div class="mainHeaderPharma">
+        <div class="mainHeaderPharma_contain">
+          <span>HOW WE CAN HELP</span>
+          <h3>PHARMACEUTICAL & BIOTECH COMPANIES</h3>
         </div>
-        <!----------------------------------------------- MENU FIXED ----------------------------------->
-        <div class="menuFixed">
+      </div>
+      <div class="mainContent">
+        <div class="containL">
+          <h2>
+            Today’s complex, interconnected marketplace demands new thinking to
+            get the most out of a medicine.
+          </h2>
+          <br />
+          <p>
+            Companies with a fragmented, short-term approach to decision-making
+            over the lifecycle often end up having to manage too many partners.
+            They may miss opportunities within markets, either because they’re
+            too slow to enter them or because they don’t enter at all.
+          </p>
+          <br />
+          <p>When that happens, patients don’t get the medicines they need.</p>
+          <br />
+          <p>
+            Real success depends on a company recognising from the outset the
+            golden thread that links clinical, unlicensed and commercial aspects
+            of a medicine’s life cycle. This thread connects and shapes
+            decisions throughout the lifecycle and reveals possibilities that
+            would otherwise have been missed
+          </p>
+          <br />
+          <p>
+            Clinigen works alongside pharmaceutical and biotech companies in all
+            phases – clinical, unlicensed, commercial – to secure and strengthen
+            this thread.
+          </p>
+          <br />
+          <p>
+            It simplifies their partnership strategy, reducing costs. It
+            supports timely entry into the right markets, enhancing revenue.
+          </p>
+          <br />
+          <div class="finContent">
+            It ensures the right patient gets the right medicine at the right
+            time.
+          </div>
+
+          <span class="title">PRODUCTS</span>
           <ul>
-            <li><a href="javascript:">The Challenge</a></li>
-            <li><a href="javascript:">Right Medicine</a></li>
-            <li><a href="javascript:">Right Patient</a></li>
-            <li><a href="javascript:">Right Time</a></li>
+            <li><a href="">Partnering</a></li>
+            <li><a href="">Divestment</a></li>
+            <li><a href="">Unlicensed Markets</a></li>
+            <li><a href="">Our Products</a></li>
+          </ul>
+          <span class="title">SERVICES</span>
+          <ul>
+            <li><a href="">Managed Access Programs</a></li>
+            <li><a href="">Clinical Supplies Management</a></li>
+            <li><a href="">Real World Data</a></li>
+            <li><a href="">Medical Science Liaison (MSLs)</a></li>
           </ul>
         </div>
-      </div>
-      <!----------------------------------------------- TEXT 1 ----------------------------------->
-      <div class="mainText1">
-        <p>
-          We exist to make sure a healthcare professional with a patient in
-          need, anywhere in the world, can always get the right medicine for
-          their individual patient – quickly, easily and safely whether licensed
-          or unlicensed. <br />
-          <br />
-          Population growth, an increasingly elderly population, growing
-          incidences of chronic diseases and rare or orphan medicines,
-          increasing patient knowledge, and concerns around counterfeit
-          medicines are all driving increasing demand for quality medicines
-          which are not available at the ‘point of care’.
-        </p>
-        <input type="button" value="Get in touch" />
-      </div>
-      <!----------------------------------------------- RIGH MEDICINE ----------------------------------->
-      <div class="rightMedicine">
-        <div class="rightMedicine_container">
-          <div class="rightMedicine_L">
-            <div class="fullMember"></div>
-            <div class="asop"></div>
-            <div class="european"></div>
-          </div>
-          <div class="rightMedicine_R">
-            <h3>RIGHT MEDICINE</h3>
-            <p>
-              We provide access to our own and other pharmaceutical companies'
-              products, whether to meet unmet medical needs or for use in
-              clinical trials. This includes providing access to medicines that
-              have received regulatory approval, but may not be available in a
-              specific patient’s own country (‘unlicensed’ medicines). <br />
-              <br />
-              Ethical unlicensed access helps protect patients from the growing
-              threat of counterfeit medicines distributed online.
-            </p>
-            <a href="http://"
-              >How we can help pharmaceutical and biotech companies</a
-            >
-            <a href="http://">How we can help healthcare professionals</a>
-          </div>
-        </div>
-      </div>
-      <!----------------------------------------------- RIGH PATIENT ----------------------------------->
-      <div class="rightPatient">
-        <div class="rightPatient_container">
-          <div class="rightPatient_L">
-            <h3>RIGHT PATIENT</h3>
-            <p>
-              Clinigen is dedicated to providing an ethical, compliant route for
-              healthcare professionals to source medicines. <br /><br />
-              Whether a medicine is unlicensed in a given country, not yet
-              commercially available, is experiencing a supply disruption, or is
-              discontinued, we can help. Our expertise in this area extends not
-              just across the entire commercial lifecycle of a product, but to
-              pre- and post-commercial stages too.
-            </p>
-            <a href="http://">How we can help healthcare professionals</a>
-            <a href="http://">How we can help patients</a>
-          </div>
-          <div class="rightPatient_R">
-            <img src="./images/keyfact.JPG" alt="" />
-            <h4>KEY FACTS</h4>
-            <div class="listCards">
-              <div class="keyFacts_Card">
-                <span class="cible"> 6000</span>
-                <p>
-                  over 6,000 HCPs use Clinigen to access unlicensed medicines
-                </p>
-              </div>
-              <div class="keyFacts_Card">
-                <span class="moitie"> 30+</span>
-                <p>
-                  years' experience as the global leader in providing access to
-                  medicines
-                </p>
-              </div>
-              <div class="keyFacts_Card">
-                <span class="pizza"> 1,700</span>
-                <p>
-                  provided access to 1,700 different unlicensed medicines across
-                  111 countries in 2017
-                </p>
-              </div>
-              <div class="keyFacts_Card">
-                <span class="ppl"> 3.5m+</span>
-                <p>3.5m+ units shipped for patient treatment per year</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!----------------------------------------------- RIGH TIME ----------------------------------->
-      <div class="rightTime">
-        <div class="rightTime_container">
-          <div class="rightTime_L">
-            <img src="./images/keyfact.JPG" alt="" />
-            <h4>KEY FACTS</h4>
-            <div class="listCards">
-              <div class="keyFacts_Card">
-                <span class="cible"> 9.5m</span>
-                <p>units shipped in the last 3 years</p>
-              </div>
-              <div class="keyFacts_Card">
-                <span class="earth"> 13</span>
-                <p>ocations around the globe</p>
-              </div>
-              <div class="keyFacts_Card">
-                <span class="moitie"> 130</span>
-                <p>shipped to 130 countries in the last 3 years</p>
-              </div>
-            </div>
-          </div>
-          <div class="rightTime_R">
-            <h3>RIGHT TIME</h3>
-            <p>
-              The patient is central to everything we do day-to-day. Often if
-              they are using one of our niche or unlicensed medicines it is
-              because they have failed to respond to front line therapies or
-              have a rare or difficult to treat condition. Shortages and delays
-              can be life-threatening. <br />
-              <br />
-              In a similar way, if a comparator medicine is unavailable for a
-              clinical trial, progress in developing new treatments can be
-              significantly delayed. <br />
-              <br />
-              We don’t just help make medicines available, we get them to the
-              people who need them. All over the world and however challenging
-              the circumstances.
-            </p>
-            <a href="http://">Read more about our operational expertise</a>
-          </div>
-        </div>
-      </div>
-      <!----------------------------------------------- RELATED LINKS ----------------------------------->
-      <div class="relatedLinks">
-        <div class="relatedLinks_container">
-          <h3>RELATED LINKS</h3>
-          <div>
-            <ul>
-              <li><a href="http://">Pharmaceuticals & Biotech companies</a></li>
-              <li><a href="http://">Healthcare Professionals</a></li>
-              <li><a href="http://">Patient Groups</a></li>
-              <li><a href="http://">Patients</a></li>
-            </ul>
-          </div>
+        <div class="containR">
+          <h4>Get in touch</h4>
+          <form action="">
+            <span>* Mandatory field</span>
+            <input type="text" name="Name Surname" id="" class="formInput" />
+            <input type="text" name="your@email.com" id="" class="formInput" />
+            <input type="text" name="Organisation" id="" class="formInput" />
+            <input type="text" name="Contact no." id="" class="formInput" />
+            <span>Reason for enquiry (select one)</span>
+            <input type="text" name="" id="" class="formInput" />
+            <input type="text" name="" id="" class="formInput" />
+            <input type="text" name="" id="" class="formInput" />
+            <input type="text" name="" id="" class="formInput" />
+            <input type="button" value="Submit query" class="btnSubmit" />
+          </form>
         </div>
       </div>
     </main>
@@ -612,7 +522,6 @@
       </div>
     </footer>
     <script src="src/js/header.js"></script>
-    <script src="src/js/mission.js"></script>
     <script src="src/js/missionClick.js"></script>
     <!-- The core Firebase JS SDK is always required and must be listed first 
 <script src="/__/firebase/8.6.1/firebase-app.js"></script>
