update css and select option

--- a/public/pharmaceutical.html
+++ b/public/pharmaceutical.html
@@ -431,15 +431,20 @@
           <h4>Get in touch</h4>
           <form action="">
             <span>* Mandatory field</span>
-            <input type="text" name="Name Surname" id="" class="formInput" />
+            <input type="text" name="Name Surname" id="" class="formInput"/>
             <input type="text" name="your@email.com" id="" class="formInput" />
             <input type="text" name="Organisation" id="" class="formInput" />
             <input type="text" name="Contact no." id="" class="formInput" />
             <span>Reason for enquiry (select one)</span>
-            <input type="text" name="" id="" class="formInput" />
-            <input type="text" name="" id="" class="formInput" />
-            <input type="text" name="" id="" class="formInput" />
-            <input type="text" name="" id="" class="formInput" />
+            <select name="" id="" class="formInput">
+              <option value="">I am a healtcare professional...</option>
+            </select>
+            <select name="" id="" class="formInput">
+              <option value="">I am an industry professional...</option>
+            </select>
+            <select name="" id="" class="formInput">
+              <option value="">I have general questions about...</option>
+              </select>
             <input type="button" value="Submit query" class="btnSubmit" />
           </form>
         </div>
