page pharma combo + css scroll

--- a/public/pharmaceutical.html
+++ b/public/pharmaceutical.html
@@ -464,23 +464,65 @@
               class="formInput"
             />
             <span class="sousTitre">Reason for enquiry (select one)</span>
+            <!------------------------------------ COMBO 1 ------------------------------------------>
             <div class="formInput combo1">I am a healtcare professional...</div>
             <div class="sousMenu1">
               <ul>
-                <li class="option">I am a healtcare professional...</li>
-                <li class="option">Looking for a medicine</li>
-                <li class="option">
+                <li class="option1">I am a healtcare professional...</li>
+                <li class="option1">Looking for a medicine</li>
+                <li class="option1">
                   Trying to resolve a medicine shortage (EU and US)
                 </li>
-                <li class="option">
+                <li class="option1">
                   Trying to resolve a medicine shortage (Asia, Australia)
                 </li>
-                <li class="option">With a medical information enquiry</li>
-                <li class="option">Who would like to request a MSL visit</li>
+                <li class="option1">With a medical information enquiry</li>
+                <li class="option1">Who would like to request a MSL visit</li>
               </ul>
             </div>
-            <div class="formInput">I am an industry professional...</div>
-            <div class="formInput">I have general questions about...</div>
+            <!------------------------------------ COMBO 2 ------------------------------------------>
+            <div class="formInput combo2">I am an industry professional...</div>
+            <div class="sousMenu2">
+              <ul>
+                <li class="option2">I am an industry professional...</li>
+                <li class="option2">
+                  Looking for support with biological sample management
+                </li>
+                <li class="option2">
+                  looking for support with clinigcal trial comparator sourcing
+                </li>
+                <li class="option2">
+                  Looking for support with clinical trial services
+                </li>
+                <li class="option2">
+                  Looking for support with early access / named patient medicine
+                  supply
+                </li>
+                <li class="option2">
+                  Looking for support with managing a mature product portfolio
+                </li>
+                <li class="option2">
+                  Looking for support with unlicensied supply of medicine into
+                  new markets
+                </li>
+                <li class="option2">
+                  Looking for support with commercial partnerships
+                  (in-licensing/out-licensing)
+                </li>
+              </ul>
+            </div>
+            <!------------------------------------ COMBO 3 ------------------------------------------>
+            <div class="formInput combo3">
+              I have general questions about...
+            </div>
+            <div class="sousMenu3">
+              <ul>
+                <li class="option3">I have general questions about...</li>
+                <li class="option3">Customer service</li>
+                <li class="option3">Investor relations</li>
+                <li class="option3">Invoicing/finance</li>
+              </ul>
+            </div>
             <textarea name="Your message" id=""> </textarea>
             <input type="button" value="Submit query" class="btnSubmit" />
           </form>
