--- a/public/index.html
+++ b/public/index.html
@@ -262,7 +262,6 @@
           </div>
           <!------------------------------------------------------>
         </div>
-
         <div id="header_bot">
           <a href="index.html">
             <img
@@ -289,7 +288,6 @@
               </ul>
             </nav>
           </div>
-
           <div class="header_bot_menuleft">
             <div id="header_bot_findAMedicine">
               <span>Find a medicine<i class="fas fa-angle-down"></i></span>
@@ -360,6 +358,16 @@
             </ul>
           </div>
         </div>
+      </div>
+      <div class="headerHamburger">
+        <div class="logoClinigenHamburger"></div>
+        <div class="menuHamburger">
+          <div class="hamburger"><span></span><span></span><span></span></div>
+          Menu
+        </div>
+      </div>
+      <div class="sousMenuHamburgerCache">
+        <a href="javascript:" class="fermer">X</a>
       </div>
     </header>
     <!-------------------------- SLIDER ---------------------------->
@@ -763,6 +771,7 @@
     </footer>
     <script src="src/js/index.js"></script>
     <script src="src/js/header.js"></script>
+    <script src="src/js/hamburger.js"></script>
     <!-- The core Firebase JS SDK is always required and must be listed first 
 <script src="/__/firebase/8.6.1/firebase-app.js"></script>
 
