--- a/public/mission.html
+++ b/public/mission.html
@@ -363,6 +363,70 @@
           </div>
         </div>
       </div>
+      <!-------------------------- HAMBURGER ---------------------------->
+      <div class="headerHamburger">
+        <a href="index.html"> <div class="logoClinigenHamburger"></div></a>
+        <div class="menuHamburger">
+          <div class="hamburger"><span></span><span></span><span></span></div>
+          Menu
+        </div>
+      </div>
+      <div class="sousMenuHamburgerCache">
+        <a href="javascript:" class="fermer">X</a>
+        <div class="header_bot_findAMedicine_Cache">
+          <span>Find a medicine<i class="fas fa-angle-down"></i></span>
+        </div>
+        <div class="sousMenuHamburgerCache_menu1">
+          <ul>
+            <li><a href="mission.html">Mission</a></li>
+            <li>
+              <a href="javascript:" class="toggleNav1">How we can help </a
+              ><i class="fas fa-angle-right"></i>
+              <!-------------------------- SOUS MENU CACHE 1 ---------------------------->
+              <div class="sousMenuHamburger_cache1">
+                <ul>
+                  <li>
+                    <i class="fas fa-angle-left"></i
+                    ><a href="javascript:" class="menuBack">How we can help</a>
+                  </li>
+                  <li>
+                    <a href="pharmaceutical.html"
+                      >Pharmaceutical & Biotech Companies</a
+                    >
+                  </li>
+                  <li><a href="">Healtcare Professionals</a></li>
+                  <li><a href="">Patient Groups</a></li>
+                  <li><a href="">Patients</a></li>
+                </ul>
+              </div>
+            </li>
+            <li>
+              <a href="#">Products & Services</a
+              ><i class="fas fa-angle-right"></i>
+            </li>
+            <li><a href="#">Insights</a></li>
+          </ul>
+        </div>
+        <div class="sousMenuHamburgerCache_menu2">
+          <ul>
+            <li>
+              <a href="#">About Clinigen</a><i class="fas fa-angle-right"></i>
+            </li>
+            <li>
+              <a href="#">Global offices</a><i class="fas fa-angle-right"></i>
+            </li>
+            <li><a href="#">Careers</a><i class="fas fa-angle-right"></i></li>
+            <li><a href="#">Investors</a><i class="fas fa-angle-right"></i></li>
+            <li>
+              <a href="#">Sustainability</a><i class="fas fa-angle-right"></i>
+            </li>
+            <li><a href="#">Newsroom</a><i class="fas fa-angle-right"></i></li>
+          </ul>
+        </div>
+        <div class="sousMenuHamburgerCache_search">
+          <input type="text" class="searchCache" />
+        </div>
+      </div>
     </header>
     <!-------------------------- CONTENU ---------------------------->
     <main>
@@ -614,6 +678,8 @@
     <script src="src/js/header.js"></script>
     <script src="src/js/mission.js"></script>
     <script src="src/js/missionClick.js"></script>
+    <script src="src/js/hamburger.js"></script>
+    <script src="src/js/input.js"></script>
     <!-- The core Firebase JS SDK is always required and must be listed first 
 <script src="/__/firebase/8.6.1/firebase-app.js"></script>
 
