healtcare et tiroir JS
+ doc des JS

--- a/public/index.html
+++ b/public/index.html
@@ -308,7 +308,7 @@
           <li>
             <a href="pharmaceutical.html">Pharmaceutical & Biotech Companies</a>
           </li>
-          <li><a href="http://">Healthcare Professionals</a></li>
+          <li><a href="healtcare.html">Healthcare Professionals</a></li>
           <li><a href="http://">Patient Groups</a></li>
           <li><a href="http://">Patients</a></li>
         </ul>
