healtcare form + combo

--- a/public/healtcare.html
+++ b/public/healtcare.html
@@ -430,10 +430,11 @@
     </header>
     <!-------------------------- CONTENU ---------------------------->
     <main>
-      <div class="mainHeaderPharma">
-        <div class="mainHeaderPharma_contain">
+      <div class="mainHeaderHealtcare">
+        <div class="mainHeaderHealtcare_contain">
           <span>HOW WE CAN HELP</span>
           <h3>HEALTHCARE PROFESSIONALS</h3>
+          <input type="button" value="Watch video" />
         </div>
       </div>
       <!----------------------------------------------- MENU FIXED ----------------------------------->
@@ -507,19 +508,19 @@
             <h3>KEY FACTS</h3>
             <div class="listeNumber">
               <div class="listeNumber_card">
-                <img src="" alt="" /><span>23,000</span>
+                <img src="./images/pizza.JPG" alt="" /><span>23,000</span>
                 <p>extensive portfolio of medicines</p>
               </div>
               <div class="listeNumber_card">
-                <img src="" alt="" /><span>130</span>
+                <img src="./images/earth.JPG" alt="" /><span>130</span>
                 <p>ocal knowledge in 130 countries across the world</p>
               </div>
               <div class="listeNumber_card">
-                <img src="" alt="" /><span>650</span>
+                <img src="./images/human.JPG" alt="" /><span>650</span>
                 <p>global team of experts across 13 locations</p>
               </div>
               <div class="listeNumber_card">
-                <img src="" alt="" /><span>24/7</span>
+                <img src="./images/target.JPG" alt="" /><span>24/7</span>
                 <p>
                   access to medicines and information through Cliniport, our
                   convenient online portal
@@ -562,6 +563,7 @@
                 pharmacists and physicians
               </p>
             </div>
+            <!--------------------------------------- TIROIR 2 ------------------------------------------------>
             <div class="tiroir2">
               <div class="clickTiroir2">
                 <h4>Highest quality medicine supply</h4>
@@ -576,6 +578,7 @@
                 the highest quality medicines.
               </p>
             </div>
+            <!--------------------------------------- TIROIR 3 ------------------------------------------------>
             <div class="tiroir3">
               <div class="clickTiroir3">
                 <h4>Operational excellence</h4>
@@ -621,102 +624,124 @@
               </ul>
             </div>
           </div>
+          <!--------------------------------------- FORMULAIRE ------------------------------------------------>
           <div class="formulaire">
-            <div class="t">
-              <span class="l"></span>
-              <h4>Get in touch</h4>
+            <div class="formulaire_titre">
+              <span class="formulaire_imgLettre"></span>
+              <h4 class="formulaire_t">Get in touch</h4>
             </div>
-
             <form action="">
-              <span class="">* Mandatory field</span>
+              <span class="formulaire_libelle">* Mandatory field</span>
               <input
                 type="text"
                 name="Name Surname"
                 id="inputName"
                 placeholder="Name Surname*"
-                class=""
+                class="formulaire_input"
               />
               <input
                 type="text"
                 name="your@email.com"
                 id="inputMail"
                 placeholder="your@email.com*"
-                class=""
+                class="formulaire_input"
               />
               <input
                 type="text"
                 name="Organisation"
                 id="inputOrg"
                 placeholder="Organisation*"
-                class=""
+                class="formulaire_input"
               />
               <input
                 type="text"
                 name="Contact no."
                 id="inputNumber"
                 placeholder="Contact no.*"
-                class=""
+                class="formulaire_input"
               />
-              <span class="">Reason for enquiry (select one)</span>
+              <span class="formulaire_sousTitre"
+                >Reason for enquiry (select one)</span
+              >
               <!------------------------------------ COMBO 1 ------------------------------------------>
-              <div class="">I am a healtcare professional...</div>
-              <div class="">
+              <div class="formulaire_input formulaire_combo1">
+                I am a healtcare professional...
+              </div>
+              <div class="formulaire_sousMenu1">
                 <ul>
-                  <li class="">I am a healtcare professional...</li>
-                  <li class="">Looking for a medicine</li>
-                  <li class="">
+                  <li class="formulaire_option1">
+                    I am a healtcare professional...
+                  </li>
+                  <li class="formulaire_option1">Looking for a medicine</li>
+                  <li class="formulaire_option1">
                     Trying to resolve a medicine shortage (EU and US)
                   </li>
-                  <li class="">
+                  <li class="formulaire_option1">
                     Trying to resolve a medicine shortage (Asia, Australia)
                   </li>
-                  <li class="">With a medical information enquiry</li>
-                  <li class="">Who would like to request a MSL visit</li>
+                  <li class="formulaire_option1">
+                    With a medical information enquiry
+                  </li>
+                  <li class="formulaire_option1">
+                    Who would like to request a MSL visit
+                  </li>
                 </ul>
               </div>
               <!------------------------------------ COMBO 2 ------------------------------------------>
-              <div class="">I am an industry professional...</div>
-              <div class="">
+              <div class="formulaire_input formulaire_combo2">
+                I am an industry professional...
+              </div>
+              <div class="formulaire_sousMenu2">
                 <ul>
-                  <li class="">I am an industry professional...</li>
-                  <li class="">
+                  <li class="formulaire_option2">
+                    I am an industry professional...
+                  </li>
+                  <li class="formulaire_option2">
                     Looking for support with biological sample management
                   </li>
-                  <li class="">
+                  <li class="formulaire_option2">
                     looking for support with clinigcal trial comparator sourcing
                   </li>
-                  <li class="">
+                  <li class="formulaire_option2">
                     Looking for support with clinical trial services
                   </li>
-                  <li class="">
+                  <li class="formulaire_option2">
                     Looking for support with early access / named patient
                     medicine supply
                   </li>
-                  <li class="">
+                  <li class="formulaire_option2">
                     Looking for support with managing a mature product portfolio
                   </li>
-                  <li class="">
+                  <li class="formulaire_option2">
                     Looking for support with unlicensied supply of medicine into
                     new markets
                   </li>
-                  <li class="">
+                  <li class="formulaire_option2">
                     Looking for support with commercial partnerships
                     (in-licensing/out-licensing)
                   </li>
                 </ul>
               </div>
               <!------------------------------------ COMBO 3 ------------------------------------------>
-              <div class="">I have general questions about...</div>
-              <div class="">
+              <div class="formulaire_input formulaire_combo3">
+                I have general questions about...
+              </div>
+              <div class="formulaire_sousMenu3">
                 <ul>
-                  <li class="">I have general questions about...</li>
-                  <li class="">Customer service</li>
-                  <li class="">Investor relations</li>
-                  <li class="">Invoicing/finance</li>
+                  <li class="formulaire_option3">
+                    I have general questions about...
+                  </li>
+                  <li class="formulaire_option3">Customer service</li>
+                  <li class="formulaire_option3">Investor relations</li>
+                  <li class="formulaire_option3">Invoicing/finance</li>
                 </ul>
               </div>
               <textarea name="Your message" id=""> </textarea>
-              <input type="button" value="Submit query" class="" />
+              <input
+                type="button"
+                value="Submit query"
+                class="formulaire_btn"
+              />
             </form>
           </div>
         </div>
@@ -802,6 +827,8 @@
     <script src="src/js/hamburger.js"></script>
     <script src="src/js/input.js"></script>
     <script src="src/js/tiroir.js"></script>
+    <script src="src/js/healtcare.js"></script>
+    <script src="src/js/healtcare_combo.js"></script>
     <!-- The core Firebase JS SDK is always required and must be listed first 
 <script src="/__/firebase/8.6.1/firebase-app.js"></script>
 
