--- a/public/healtcare.html
+++ b/public/healtcare.html
@@ -602,7 +602,7 @@
               </p>
             </div>
           </div>
-          <div class="relatedLinks">
+          <div class="relatedLinksHealt">
             <h4>RELATED LINKS</h4>
             <ul>
               <li><a href="#">About Clinigen</a></li>
